# kaggle_home_credit

./: README.md  Untitled.ipynb  creditrisk-sklearn-pipeline-integrated-metric.ipynb  data_proc.py  eda.ipynb  experiment-encoding.ipynb  experiment-full-data.ipynb  experiments-chrono.ipynb  experiments.ipynb  home-credit-ensemble-infer-lgb-cat.ipynb  pyproject.toml  requirements.txt  test_feature_eng.py  train.ipynb
config/mlflow/: Dockerfile  mlflow-deployment.yaml  mlflow-pvc.yaml
mlruns/0/: meta.yaml
mlruns/218050481937314459/: meta.yaml
mlruns/218050481937314459/03e1e9d3a379449998d94c1fd859cc48/: meta.yaml
mlruns/218050481937314459/13b646eceb7a4c1082a4e1bc6a83f17e/: meta.yaml
mlruns/218050481937314459/1db93c2dba57421181d417f8934f01bb/: meta.yaml
mlruns/218050481937314459/4f6cc88bf5434e3d9c1bbe955d8febdc/: meta.yaml
mlruns/218050481937314459/5080b2a614c04d62b44a59cf8cb8a246/: meta.yaml
mlruns/218050481937314459/5c8f1881a5ad4416a41df94a070b4e3d/: meta.yaml
mlruns/218050481937314459/6403d3506afc48adb8f5a3168e67da9e/: meta.yaml
mlruns/667472224209157606/: meta.yaml
models/: base95_3cv_lgb_0.pkl  base95_3cv_lgb_1.pkl  base95_3cv_lgb_2.pkl  base95_5cv_lgb_0.pkl  base95_5cv_lgb_1.pkl  base95_5cv_lgb_2.pkl  base95_5cv_lgb_3.pkl  base95_5cv_lgb_4.pkl
pipeline-components/: pipeline.py  pipeline.yaml
pipeline-components/data_proc/: Dockerfile  data_proc.py
pipeline-components/data_proc_alt/: Dockerfile  data_proc_alt.py
pipeline-components/feature_eng/: Dockerfile  feature_eng.py
pipeline-components/train/: Dockerfile  train.py
(+73 files in other folders)
